--- a/EV-CHARGING_STATION_APP/package.json
+++ b/EV-CHARGING_STATION_APP/package.json
@@ -15,7 +15,9 @@
     "react-native": "0.74.5",
     "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "@expo/metro-runtime": "~3.2.3",
+    "expo-font": "~12.0.10",
+    "expo-splash-screen": "~0.27.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
