--- a/EV-CHARGING_STATION_APP/package.json
+++ b/EV-CHARGING_STATION_APP/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.29",
+    "@expo/metro-runtime": "~3.2.3",
     "expo": "~51.0.28",
+    "expo-font": "~12.0.10",
+    "expo-secure-store": "^13.0.2",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3",
-    "expo-font": "~12.0.10",
-    "expo-splash-screen": "~0.27.6"
+    "expo-web-browser": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
