--- a/FitnessApp--Fitverse/package.json
+++ b/FitnessApp--Fitverse/package.json
@@ -40,6 +40,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
