--- a/FitnessApp--Fitverse/package.json
+++ b/FitnessApp--Fitverse/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@demfabris/react-native-snap-carousel": "^3.9.3",
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@react-native-firebase/storage": "^21.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-native-vector-icons/ionicons": "^7.4.0-alpha.34",
@@ -19,26 +19,26 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@types/react-native-snap-carousel": "^3.8.11",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "^15.0.7",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-image": "~2.0.0",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "^3.10.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "tailwindcss": "^3.3.2",
